# cheapquant-fixed-income

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.json  validate-skill-hook.sh
.claude/skills/: validate-skill.md
config/: cqfi.yaml  cqfi_gui.yaml
data/cache/: active_cache.db  active_cache.sqlite
scripts/: validate_skill.py
semantics/: bond_analytics.yaml  quant_cache.yaml  ycs_data.yaml
src/cheapquant_fi/: __init__.py  analytics_calculator.py  analytics_input.py  analytics_output.py  bond_manager.py  cli_tools.py  config.py  instruments.py  issuers.py  mcp_tools.py  numeric_term_structure.py  repo_term_structure.py  tenor.py  tenors.py  ycs_tenors.py
src/cheapquant_fi/agent/: cli.py  planner.py
src/cheapquant_fi/cache/: __init__.py  manager.py  registry.py
src/cheapquant_fi/data/: create_bond_analytics_db.py  rates_loader.py
src/cheapquant_fi/gui/: __init__.py  app.py  chat_dialog.py  chat_settings_dialog.py  gui_constants.py  gui_settings.py  gui_utils.py  plot_settings_dialog.py  plotnine_wrapper.py  table_and_plot_widget.py
src/cheapquant_fi/quantlib/: analytics.py  analytics_calculator.py  analytics_input.py  analytics_output.py  cmt.py  curve.py  instruments.py  market_context.py  quantlib_analytics_calculator.py  quantlib_curve.py  quantlib_market_context.py  quantlib_market_context_manager.py
src/cheapquant_fi/utils/: ggplot_utils.py
tests/: test_analytics_rolls.py  test_bond.py  test_bond_analytics_db_schema.py  test_bond_manager.py  test_cli_tools.py  test_cmt.py  test_config.py  test_curve.py  test_langsmith.py  test_market_context.py  test_market_context_manager.py  test_mentions.py  test_numeric_term_structure.py  test_planner.py  test_quantlib_analytics_calculator.py  test_repo_term_structure.py  test_tenor.py
