[project]
name = "cheapquant-fixed-income"
version = "0.1.0"
description = "Interactive agent for QuantLib fixed-income analytics on government bonds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "QuantLib>=1.36",
    "duckdb>=1.5.0",
    "framecache",
    "mcp-data",
    "polars>=1.41.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "plotnine>=0.15.7",
    "pyside6>=6.11.1",
    "anthropic>=0.112.0",
    "decorules",
]

[project.scripts]
cqfi     = "cheapquant_fi.agent.cli:main"
cqfi-gui = "cheapquant_fi.gui.app:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cheapquant_fi"]

[tool.uv.sources]
framecache = { git = "https://github.com/FulgentMcGuffin/framecache.git" }
decorules = { git = "https://github.com/FulgentMcGuffin/decorules.git" }
mcp-data = { git = "https://github.com/FulgentMcGuffin/mcp_data.git" }

[tool.uv]
override-dependencies = [
    "numba>=0.61.0",
    "llvmlite>=0.44.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
